# gantry-board

./: .dockerignore  .env.example  .envrc.sample  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.prod  LICENSE  Taskfile.yml  deny.toml  devbox.json  docker-compose.prod.yml  docker-compose.yml  openapi.json  process-compose.yml
.claude/: settings.json
.claude/agents/: architect-reviewer.md  code-reviewer.md  error-detective.md  qa-expert.md
.claude/commands/: create-task.md  tdd-cycle.md
.claude/hooks/: post-write-fmt.sh  pre-commit-gate.sh  stop-smart-check.sh  sync-gitmoji-pattern.sh
.claude/skills/branch-strategy/: SKILL.md
.claude/skills/commit-rules/: SKILL.md
.claude/skills/feature-dev/: SKILL.md
.claude/skills/quality-checks/: CLAUDE.md  SKILL.md
.claude/skills/tdd-cycle/: SKILL.md
.config/: nextest.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.prod
backend/migrations/: 002_create_project_members.sql  20260203000001_create_projects.sql  20260203000003_create_tasks.sql  20260204000001_create_users.sql  20260204000002_create_sessions.sql  20260209000001_create_agent_sessions.sql  20260210000001_create_agent_session_outputs.sql  20260211000001_add_unique_active_session_constraint.sql  20260211000002_add_prompt_to_agent_sessions.sql  20260212000001_add_output_created_at_index.sql  20260212000002_add_tasks_assigned_to_index.sql  20260212000003_create_task_comments.sql  20260213000001_create_docker_previews.sql  20260213120000_create_github_tables.sql  20260214000001_create_github_pull_requests.sql  20260216000001_add_composite_indexes.sql  20260218000001_add_tasks_assigned_to_fk.sql  20260218000002_add_preview_port_unique_index.sql  20260219000001_add_agent_sessions_worktree_name.sql  20260219100001_add_paused_to_active_session_constraint.sql  20260219200001_create_project_messages.sql  20260219300001_create_project_invitations.sql  20260224000001_create_audit_events.sql  20260226000001_add_repository_path_to_projects.sql  20260227000001_add_is_admin_to_users.sql
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  observability.rs  openapi.rs  test_helpers.rs
backend/src/agent/: claude_code.rs  executor.rs  gemini_cli.rs  mod.rs  orchestrator.rs
backend/src/agent/orchestrator/: lifecycle.rs  mod.rs  monitor.rs
backend/src/auth/: csrf.rs  host_check.rs  middleware.rs  mod.rs  password.rs
backend/src/github/: api.rs  label_mapping.rs  mod.rs  octocrab_client.rs  sync_engine.rs
backend/src/github/sync_engine/: mod.rs  pull.rs  push.rs
backend/src/handlers/: admin.rs  agent_sessions.rs  auth.rs  github_links.rs  health.rs  invitations.rs  mod.rs  previews.rs  project_members.rs  project_messages.rs  projects.rs  pull_requests.rs  task_comments.rs  tasks.rs  users.rs  webhooks.rs  worktrees.rs
backend/src/models/: agent_session.rs  agent_session_output.rs  docker_preview.rs  github.rs  mod.rs  pagination.rs  project.rs  project_invitation.rs  project_message.rs  task.rs  task_comment.rs  user.rs
backend/src/realtime/: handler.rs  mod.rs  ws_handler.rs
backend/src/repositories/: agent_session_output_repository.rs  agent_session_repository.rs  audit_repository.rs  github_link_repository.rs  github_pr_repository.rs  github_sync_repository.rs  invitation_repository.rs  member_repository.rs  mod.rs  project_message_repository.rs  project_repository.rs  session_repository.rs  task_comment_repository.rs  task_repository.rs  user_repository.rs
backend/src/services/: agent_session_output_service.rs  agent_session_service.rs  audit_service.rs  authorization_service.rs  backup_service.rs  github_link_service.rs  github_pr_service.rs  github_sync_service.rs  invitation_service.rs  member_service.rs  mod.rs  preview_repository.rs  preview_service.rs  project_message_service.rs  project_service.rs  session_service.rs  task_comment_service.rs  task_service.rs  traits.rs  user_service.rs  worktree_service.rs
backend/src/services/agent_session_output_service/: buffer.rs  mod.rs  query.rs
backend/src/services/agent_session_service/: command.rs  mod.rs  query.rs
backend/src/services/project_service/: commands.rs  mod.rs  queries.rs
backend/src/services/task_service/: mod.rs  tests.rs
backend/src/sse/: event.rs  handler.rs  hub.rs  mod.rs  ws_handler.rs
backend/src/ws/: handler.rs  hub.rs  message.rs  mod.rs
backend/tests/: access_logging.rs  admin_api.rs  agent_sessions_api.rs  auth_api.rs  authorization_api.rs  error_response.rs  export_openapi.rs  github_links_api.rs  github_sync_api.rs  health_api.rs  host_validation.rs  invitations_api.rs  observability.rs  previews_api.rs  previews_lifecycle.rs  project_members_api.rs  project_messages_api.rs  projects_api.rs  pull_requests_api.rs  security_hardening.rs  task_comments_api.rs  tasks_api.rs  users_api.rs  validation_boundaries.rs  worktrees_api.rs
backend/tests/agent_sessions/: crud.rs  lifecycle.rs  main.rs  outputs.rs  pause_resume.rs  restart.rs
backend/tests/authorization/: main.rs  owner_protection.rs  projects.rs  tasks_members.rs
backend/tests/common/: mod.rs
docs/: ARCHITECTURE.md  BACKUP.md  DOCKER_SECURITY.md  PRD.md  ROADMAP.md  RUNBOOKS.md  TOOLS.md
docs/adr/: shadcn-ui-evaluation.md
docs/issues/: create-test-improvement-issues.sh
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  biome.json  docker-entrypoint.sh  eslint.config.js  nginx.conf  orval.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/fixtures/: index.ts
frontend/e2e/helpers/: api.ts  auth.ts
frontend/e2e/tests/: agent-sessions.spec.ts  auth.spec.ts  health.spec.ts  projects.spec.ts  tasks.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentOutputViewer.test.tsx  AgentOutputViewer.tsx  AgentPanel.test.tsx  AgentPanel.tsx  CommentSection.test.tsx  CommentSection.tsx  ErrorBoundary.test.tsx  TaskCard.tsx  (+37 more)
taskfiles/: api.yml  backend.yml  db.yml  frontend.yml
(+109 files in other folders)
