[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/June3141/gantry_board"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
