[workspace]
resolver = "2"
members = ["backend"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/June3141/gantry_board"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout", "request-id", "util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }

# API Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Validation
garde = { version = "0.22", features = ["derive", "email"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Config
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# Logging / Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum-prometheus = "0.10"
metrics = "0.24"

# GitHub Integration
octocrab = "0.49"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Rate limiting
tower_governor = "0.8"

# Password strength
zxcvbn = "3.1"

# Authentication
argon2 = "0.5"
rand = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }

# Git
git2 = "0.20"

# Agent
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
nix = { version = "0.29", features = ["signal"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Docker
bollard = "0.19"
tar = "0.4"
http-body-util = "0.1"
bytes = "1"
