[package]
name = "gantry-board"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gantry-board"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
