[package]
name = "gantry-board"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gantry-board"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
garde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-prometheus = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
axum-extra = { workspace = true }
git2 = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
tower_governor = { workspace = true }
zxcvbn = { workspace = true }
bollard = { workspace = true }
octocrab = { workspace = true }
tar = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
axum-test = "18"
tempfile = "3"
